<resources>
    <string name="app_name">Rapid Doc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="admob_app_id">ca-app-pub-4411531601838575~6354155868</string>


    <string name="source_google_drive">Google Drive</string>
    <string name="start_sync">Start Sync</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="status_logged_out">Logged Out</string>
    <string name="status_logged_in">Logged In</string>
    <string name="status_user_cancelled">User Cancelled</string>
    <string name="status_error">We found a problem: %1$s</string>
    <string name="not_open_file">Could not open file</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="app_theme">App Theme</string>
    <string name="enter_watermark_text">Enter Watermark Text</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="name_goes_here">Name goes here</string>
    <string name="foldername">FolderName</string>
    <string name="date_time">date time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="next">Next</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="page_number_settings">Page Number Settings</string>
    <string name="starting_page_number">Starting Page Number</string>
    <string name="from_page_number">From Page Number</string>
    <string name="to_page_number">To Page Number</string>
    <string name="text_size">Text Size</string>
    <string name="text_color">Text Color</string>
    <string name="pdf_merge">PDF Merge</string>
    <string name="watermark">watermark</string>
    <string name="split_by_fixed_range">Split By Fixed Range</string>
    <string name="pdf_to_image">PDF to Image</string>
    <string name="split">Split</string>
    <string name="idcard">idcard</string>
    <string name="encrypt">Encrypt</string>
    <string name="ocr">OCR</string>
    <string name="extract_text_from_pdf">Extract Text From PDF</string>
    <string name="page_no">Page No</string>
    <string name="delete_page">Delete Page</string>
    <string name="rotate_pdf">Rotate PDF</string>
    <string name="compress">Compress</string>
    <string name="office_to_pdf">Office to PDF</string>
    <string name="discard">Discard</string>
    <string name="rename_file_as">Rename File as</string>
    <string name="buy">Buy</string>
    <string name="confirm_copy_files">Confirm Copy Files</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_password">Enter password</string>
    <string name="save_settings">Save Settings</string>
    <string name="select_a_pdf_from_pdf_button_below">Select a pdf from PDF button below</string>
    <string name="ex_split_at_every_2_pages">Ex: Split at every 2 pages</string>
    <string name="select_pdf">Select PDF</string>
    <string name="google_drive_account">Google Drive Account</string>
    <string name="settings">Settings</string>
    <string name="set_pin">Set Pin</string>
    <string name="re_enter_pin">Re-Enter Pin</string>
    <string name="change_password">Change Password</string>
    <string name="remove_password">Remove Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="extract_text">Extract Text</string>
    <string name="save_watermarked_pdf">Save watermarked PDF</string>
    <string name="add_pdf">Add PDF</string>
    <string name="choose_color">Choose color</string>
    <string name="failed_to_add_watermark">Failed To Add Watermark</string>
    <string name="pdf_saved_at">PDF Saved at</string>
    <string name="failed_to_save">Failed To Save</string>
    <string name="copied">copied</string>
    <string name="failed_to_remove_pages">Failed To Delete Pages</string>
    <string name="failed_to_get_image">Couldn\'t get Image</string>
    <string name="select_image">Select Image</string>
    <string name="failed_to_rename">Failed to rename</string>
    <string name="folder_already_exist">Folder already exist with same Name</string>
    <string name="pdf_tools">PDF Tools</string>
    <string name="select_folder">Please Select a Folder</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_message">Are You sure you want to delete this? It can\'t be recovered.</string>
    <string name="backing_in_background">Backing Up data In Background</string>
    <string name="sync_success">Synced Successfully</string>
    <string name="failed_to_sync">Failed to Sync</string>
    <string name="failed_to_login">Failed To Login</string>
    <string name="error">Error</string>
    <string name="already_exist">already present at screen</string>
    <string name="empty_list">Empty List</string>
    <string name="signed_out_successfully">Signed Out Successfully</string>
    <string name="failed_to_signout">Failed To sign out</string>
    <string name="failed_to_get_text">Could not get Text</string>
    <string name="failed_convert_pdf">Failed to convert File to pdf</string>
    <string name="file_saved_at">File Saved at</string>
    <string name="invalid_format">Invalid File Format</string>
    <string name="single_page_mode">Single Page Mode</string>
    <string name="facing_page_mode">Facing Page Mode</string>
    <string name="please_enter_valid_page_number">Please Enter Valid Page Number</string>
    <string name="please_enter_valid_starting_range">Please Enter Valid Starting Range</string>
    <string name="please_enter_valid_ending_range">Please Enter Valid Ending Range</string>
    <string name="select_font_size">Select a Font Size</string>
    <string name="invalid_range">Invalid Range</string>
    <string name="failed_to_get_pdf">Failed to get PDF</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="add_pdf_to_merge_list">Add Pdf to merge</string>
    <string name="merge_pdf_from_here">Merge PDF from here</string>
    <string name="corrupted_pdf">Failed to merge pdf.. Maybe one of the pdf is corrupted</string>
    <string name="please_select_atleast_one_pdf">Please Select at least 1 PDF</string>
    <string name="failed_to_load_purchase">Failed To Load Purchase Menu</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="connection_lost">Connection Lost Retry Again</string>
    <string name="purchase_successful">Purchase Successful</string>
    <string name="pages">pages</string>
    <string name="add_custom_range">add Custom Range</string>
    <string name="pdf_selected">PDF selected</string>
    <string name="failed_to_split">Failed To Split</string>
    <string name="premium">Premium</string>
    <string name="gridview">Show As Grid</string>
    <string name="listview">List View</string>
    <string name="import_from_gallery">Import from gallery</string>
    <string name="create_folder">Create Folder</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="confirm_remove_password">Are you sure you want to remove password?</string>
    <string name="password_removed">Password Remove</string>
    <string name="password_set_successfuly">Password Set Successfully</string>
    <string name="password_do_not_match">Passwords Do not match!</string>


</resources>
