<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jayshreegopalapps.imagetopdf.MainActivity">

    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_set_password"
        android:icon="@drawable/ic_enhanced_encryption_black_24dp"
        android:title="@string/encrypt"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/create_folder"
        app:showAsAction="always" ><menu>

        <item
            android:id="@+id/action_rename_folder"
            android:icon="@drawable/ic_create_new_folder_black_24dp"
            android:title="@string/rename_folder"
            android:enabled="false"
            app:showAsAction="never" />

    <item
        android:id="@+id/action_create_folder"
        android:icon="@drawable/ic_create_new_folder_black_24dp"
        android:title="@string/create_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_gallery"
        android:icon="@drawable/ic_image_black_24dp"

        android:title="@string/import_from_gallery"
        app:showAsAction="never" />

        <item
            android:id="@+id/action_recycler_mode"
            android:icon="@drawable/ic_sort_black_24dp"
            android:title="@string/gridview"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp2"
            android:title="@string/action_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_premium"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/premium"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_sync"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/start_sync"
            app:showAsAction="never" />

</menu>
    </item>
</menu>