<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_set_password_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SetPasswordActivity">

    <TextView
        android:id="@+id/text_view_set_password"
        android:layout_above="@+id/password_set_password"
        android:padding="20dp"
        android:textColor="@color/colorAccent"
        android:text="@string/set_pin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/arbutusslabregular"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_set_password"
        android:inputType="numberPassword"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:hint="@string/enter_pin"
        android:textColorHint="@color/colorAccent"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_retype_set_password"
        android:inputType="numberPassword"
        android:layout_below="@+id/password_set_password"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:hint="@string/re_enter_pin"
        android:textColorHint="@color/colorAccent"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/button_password_next_set_password"
        android:layout_below="@+id/password_retype_set_password"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:text="@string/next"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/change_password_set_password"
        android:textColor="@color/colorPrimary"
        android:text="@string/change_password"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/remove_password_set_password"
        android:textColor="@color/colorPrimary"
        android:text="@string/remove_password"
        android:visibility="invisible"
        android:layout_below="@+id/change_password_set_password"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>


</RelativeLayout>