<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/ll_settings_top_watermark"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_height="50dp">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/page_number_settings"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/font_size_watermark"
                android:inputType="numberDecimal"
                android:hint="@string/select_font_size"
                android:padding="20dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/text_color"
                android:textAlignment="center"
                android:padding="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/color_picker_indicator_watermak"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#000"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btn_save_settings_watermark"
                android:text="@string/save_settings"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>