<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/rename_file_rename_bottom_modal"
       android:hint="@string/rename_file_as"
       android:textColorHint="@color/colorPrimaryDark"
android:textSize="12sp"
       android:fontFamily="@font/arbutusslabregular"
       android:padding="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:weightSum="2"
       >

      <Button
          android:id="@+id/save_rename_bottom_modal"
          android:layout_margin="20dp"
          android:text="@string/save"
          android:fontFamily="@font/arbutusslabregular"
android:textSize="12sp"
          android:background="@color/colorAccent"
          android:textColor="@color/colorPrimary"
          android:layout_weight="1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/cancel_rename_bottom_modal"
          android:text="@string/discard"
          android:textSize="12sp"
          android:background="@color/colorAccent"
          android:textColor="@color/colorPrimary"
          android:layout_margin="20dp"
          android:layout_weight="1"
          android:layout_width="match_parent"
          android:fontFamily="@font/arbutusslabregular"

          android:layout_height="wrap_content"/>

   </LinearLayout>

</LinearLayout>