<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OCRActivity">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_banner_ocr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4411531601838575/7801999673">
    </com.google.android.gms.ads.AdView>

    <ImageView
        android:id="@+id/ocr_image"
        android:layout_above="@+id/ll_ocr"
        android:layout_below="@+id/adView_banner_ocr"
        android:src="@drawable/no_image_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_ocr"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:text="@string/camera"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:id="@+id/btn_capture_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:text="@string/gallery"
            android:id="@+id/btn_open_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:text="@string/extract_text"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:id="@+id/btn_extract_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>